--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     完全ローカルで動作する高性能マルチロールな生成Aiアプリケーションです。<br>
                     最新のAI技術を駆使し、画像生成、動画生成、3Dモデリング、テキスト生成など、多彩な機能を提供します。<br>
                     直感的なインターフェースと高度なカスタマイズオプションにより、初心者からプロフェッショナルまで幅広いユーザーに対応。<br>
-                    クリエイティブなプロジェクトを効率的にサポートし、あなたのアイデアを現実のものにします。
+                    クリエイティブなプロジェクトを効率的にサポートし、あなたのアイデアを現実のものにします。<br>
 
-                    ※このアプリは高性能なハードウェアを必要とします。システム要件を必ずご確認ください。
-                    ※このアプリケーションはNvidia GPUを必要とします。
+                    ※このアプリは高性能なハードウェアを必要とします。システム要件を必ずご確認ください。<br>
+                    ※このアプリケーションはNvidia GPUを必要とします。<br>
                 </p>
             </section>
             
@@ -58,3 +58,4 @@
 </body>
 
 </html>
+
